deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hello-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: hello-py-app
    template:
       metadata:
          labels:
             app: hello-py-app
       spec:
          containers:
          - name: hello-py
            image: bytybai/v1:latest
            ports:
              - name: web 
                containerPort: 80	
            livenessProbe:
               httpGet:
                 port: 8000
                 path: /
               initialDelaySeconds: 10
               periodSeconds: 5
               timeoutSeconds: 2
            readinessProbe:
               httpGet:
                  port: 8000
                  path: /health
               initialDelaySeconds: 10
               periodSeconds: 5
